implements full CRUD capabilities

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,8 +18,9 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdCollector</a></li>
         </ul>
         <ul class="right">
-          <li><a href="/about">About</a></li>
-          <li><a href="/cats">View All My Birds</a></li>
+          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'bird_create' %}">Add a Bird Siting</a></li>
+          <li><a href="{% url 'index' %}">View All My Bird Sitings</a></li>
         </ul>
       </div>
     </nav>
