--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -1,17 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="card">
-    <div class="card-content">
-        <span class="card-title">{{ bird.sitename }}</span>
-        <p>Breed: {{ bird.breed }}</p>
-        <p>Coloration: {{ bird.colors }}</p>
-        <p>Count: {{ bird.count }}</p>
+<h1>Bird Siting Details</h1>
+<div class="row">
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ bird.sitename }}</span>
+                <p>Breed: {{ bird.breed }}</p>
+                <p>Coloration: {{ bird.colors }}</p>
+                <p>Count: {{ bird.count }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'bird_update' bird.id %}">Edit</a>
+                <a href="{% url 'bird_delete' bird.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-    <div class="card-action">
-        <a href="{% url 'bird_update' bird.id %}">Edit</a>
-        <a href="{% url 'bird_delete' bird.id %}">Delete</a>
+    <div class="col s6">
+        <table class="striped">
+          <thead>
+            <tr><th>Date</th><th>Food</th></tr>
+          </thead>
+          <tbody>
+            {% for feeding in bird.feeding_set.all %}
+              <tr>
+                <td>{{feeding.date}}</td>
+                <td>{{feeding.get_food_display}}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
     </div>
-
 </div>
 
 {% endblock %}
