--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,18 +9,19 @@
   <title>Bird Collector</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
   <header class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper">
+      <div class="nav-wrapper green">
         <ul>
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;BirdCollector</a></li>
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'bird_create' %}">Add a Bird Siting</a></li>
-          <li><a href="{% url 'index' %}">View All My Bird Sitings</a></li>
+          <li><a href="{% url 'bird_create' %}">Add a Bird Sighting</a></li>
+          <li><a href="{% url 'index' %}">View All My Bird Sightings</a></li>
         </ul>
       </div>
     </nav>
@@ -29,7 +30,7 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer class="page-footer">
+  <footer class="page-footer green">
     <div class="right">All Rights Reserved, &copy; 2020 Bird Collector &nbsp;</div>
   </footer>
 </body>
