--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Bird Siting Details</h1>
+<h1>Bird Sighting Details</h1>
 <div class="row">
     <div class="col s6">
         <div class="card">
@@ -17,6 +17,11 @@
         </div>
     </div>
     <div class="col s6">
+        <form action="{% url 'add_feeding' bird.id %}" method="post">
+            {% csrf_token %}
+            {{ feeding_form.as_p }}
+            <input type="submit" value="Add Feeding" class="btn">
+        </form>
         <table class="striped">
           <thead>
             <tr><th>Date</th><th>Food</th></tr>
@@ -32,5 +37,34 @@
         </table>
     </div>
 </div>
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>{{bird.breed}} Gifts</h3>
+    {% if bird.gifts.count %}
+      {% for gift in bird.gifts.all %}
+      <div class="card">
+        <div class="card-content">
+          <span><strong>{{gift.name}}</strong>: {{gift.description}}</span>
+        </div>
+      </div>
+      {% endfor %}
+      {% else %}
+      <h5>No Gifts :(</h5>
+      {% endif %}
+  </div>
+</div>
+<script>
+    let dateEl = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+
+    let selectEl = document.getElementById('id_food');
+    M.FormSelect.init(selectEl);
+</script>
 
 {% endblock %}
