--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,8 +20,14 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'bird_create' %}">Add a Bird Sighting</a></li>
-          <li><a href="{% url 'index' %}">View All My Bird Sightings</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'bird_create' %}">Add a Bird Sighting</a></li>
+            <li><a href="{% url 'index' %}">View All My Bird Sightings</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+          {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+          {% endif %}
         </ul>
       </div>
     </nav>
