--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -15,6 +15,17 @@
                 <a href="{% url 'bird_delete' bird.id %}">Delete</a>
             </div>
         </div>
+        {% for photo in bird.photo_set.all %}
+          <img class="responsive-img card-panel" src="{{photo.url}}" alt="{{bird.name}}">
+        {% empty %}
+          <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+        {% endfor %}
+        <form action="{% url 'add_photo' bird.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+          {% csrf_token %}
+          <input type="file" name="photo-file">
+          <br><br>
+          <input type="submit" value="Upload Photo" class="btn">
+        </form>
     </div>
     <div class="col s6">
         <form action="{% url 'add_feeding' bird.id %}" method="post">
